crossplaneinabox/yaml/argocdroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: argocd-server-tls
  namespace: $argo_namespace
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: argocd-gw
      namespace: argocd
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: argocd-server
          port: 443
          weight: 1
