crossplaneinabox/yaml/argocdroutehttp.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: $argo_namespace
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: argocd-gw # Replace with your Gateway name
      namespace: argocd # Replace with your Gateway's namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: / # Adjust path as needed
      backendRefs:
        - group: ''
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
